REGRESSION (r247566): Leak of UICTFontDescriptor in WebCore::FontDatabase::InstalledFont::InstalledFont() <https://webkit.org/b/201893> <rdar://problem/55464115>

Reviewed by Brent Fulgham.

* platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::FontDatabase::InstalledFont::InstalledFont): Use
adoptCF() to fix the leak.


Canonical link: https://commits.webkit.org/215556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250031 268f45cc-cd09-0410-ab3c-d52691b4dbfc